// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webpack plugin package webpack4 1`] = `
Array [
  Object {
    "chunkNames": Array [],
    "chunks": Array [],
    "emitted": true,
    "info": Object {},
    "isOverSizeLimit": undefined,
    "name": "bundle-stats.html",
    "size": 0,
  },
  Object {
    "chunkNames": Array [
      "main",
    ],
    "chunks": Array [
      0,
    ],
    "emitted": true,
    "info": Object {},
    "isOverSizeLimit": undefined,
    "name": "main.js",
    "size": 956,
  },
]
`;

exports[`webpack plugin package webpack5 1`] = `
Array [
  Object {
    "auxiliaryChunkIdHints": Array [],
    "auxiliaryChunkNames": Array [],
    "auxiliaryChunks": Array [],
    "cached": false,
    "chunkIdHints": Array [],
    "chunkNames": Array [],
    "chunks": Array [],
    "comparedForEmit": false,
    "emitted": true,
    "filteredRelated": undefined,
    "info": Object {
      "size": 423496,
    },
    "isOverSizeLimit": true,
    "name": "bundle-stats.html",
    "related": Object {},
    "size": 423496,
    "type": "asset",
  },
  Object {
    "auxiliaryChunkIdHints": Array [],
    "auxiliaryChunkNames": Array [],
    "auxiliaryChunks": Array [],
    "cached": false,
    "chunkIdHints": Array [],
    "chunkNames": Array [
      "main",
    ],
    "chunks": Array [
      179,
    ],
    "comparedForEmit": false,
    "emitted": true,
    "filteredRelated": undefined,
    "info": Object {
      "minimized": true,
      "size": 27,
    },
    "isOverSizeLimit": false,
    "name": "main.js",
    "related": Object {},
    "size": 27,
    "type": "asset",
  },
]
`;
